# doka.one

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  api.html  guides  install_all.bat  install_all.sh  rustfmt.toml  start.bat  start_debug.bat  start_debug.sh  start_laptop.bat  start_release.bat  start_release.sh  start_release_laptop.bat  start_services.sh  start_tika.bat  tika.sh
.run/: Run document-server.run.xml
admin-server/: Cargo.toml
admin-server/database/: 00_Postgres Database Setup Step-By-Step.txt  10-ar-create-db.sql  10_dokaadmin_schema.sql  20-ar-create-data.sql  20_dokasys_schema.sql  30-dm-create-sysadmin.sql  30_keymanager_schema.sql  40-km-table.sql  40_create_function.sql  50-extra-indexes.sql  DA-00-admin-tables.sql  Postgres Database Setup Step-By-Step.txt  unaccent_default.rules
admin-server/env/config/: application.properties  conf-sample.yaml
admin-server/src/: create_customer.rs  customer.rs  dk_password.rs  login.rs  main.rs  schema.rs  schema.sql  schema_cs.rs  schema_file.sql  schema_fs.rs
common-config/: Cargo.toml
common-config/src/: conf_reader.rs  lib.rs  properties.rs
commons-error/: Cargo.toml
commons-error/env/config/: application.properties
commons-error/src/: lib.rs
commons-pg/: Cargo.toml
commons-pg/src/: lib.rs  sql_transaction.rs  sql_transaction2.rs  sql_transaction_async.rs
commons-services/: Cargo.toml
commons-services/src/: database_lib.rs  key_lib.rs  lib.rs  property_name.rs  session_lib.rs  token_lib.rs  tracker.rs  x_request_id.rs
dkconfig/: Cargo.toml
dkconfig/src/: conf_reader.rs  lib.rs  properties.rs
dkcrypto/: Cargo.toml
dkcrypto/benches/: my_benchmark.rs
dkcrypto/src/: dk_aes.rs  dk_chacha.rs  dk_crypto.rs  dk_crypto_error.rs  lib.rs
dkcrypto/tests/: all_tests.rs
dkdto/: Cargo.toml
dkdto/src/: api_error.rs  cbor_type.rs  error_codes.rs  error_replies.rs  lib.rs  web_types.rs
document-server/: Cargo.toml  log4rs.yaml
document-server/env/config/: application.properties  log4rs.yaml
document-server/src/: char_lib.rs  expression_filter_parser.rs  filter_ast.rs  filter_lexem_parser.rs  filter_lexer.rs  filter_normalizer.rs  filter_token_parser.rs  ft_tokenizer.rs  fulltext.rs  item.rs  item_query.rs  language.rs  main.rs  tag.rs
document-server/src/engine/: generator.rs
document-server/src/filter/: filter_ast.rs  filter_lexer.rs  filter_normalizer.rs  mod.rs
doka-api-tests/: Cargo.toml
doka-api-tests/src/: lib.rs  main.rs
doka-api-tests/tests/: api_customer_tests.rs  api_document_tests.rs  api_fileserver_tests.rs  api_login_tests.rs  lib.rs  test_lib.rs  ut10_api_login_tests.rs  ut20_api_customer_tests.rs  ut30_api_document_tests.rs  ut40_api_fileserver_tests.rs  ut50_api_fileserver_load_tests.rs
doka-cli/: Cargo.toml  Commands.md  commands.json
doka-cli/src/: async_request_client.rs  command_options.rs  customer_commands.rs  file_commands.rs  item_commands.rs  lib.rs  main.rs  request_client.rs  session_commands.rs  token_commands.rs
doka-dbpool-test-server/: Cargo.toml
doka-dbpool-test-server/database/: connection_history.ddl
doka-dbpool-test-server/env/config/: application.properties  log4rs.yaml
doka-dbpool-test-server/src/: dbpool_delegate.rs  main.rs
doka-harbor/: Cargo.toml
doka-harbor/src/: buckets.rs  component1.rs  date_tools.rs  kv_store.rs  main.rs  search_result_component.rs  search_result_model.rs  upload_watcher_component.rs
doka-harbor/static/: neutrino.js  script.js  search.css
doka-harbor/templates/: footer.hbs  image.hbs  index.hbs  item_update.hbs
doka-one-installer/: Cargo.toml  push_artefacts.sh
doka-one-installer/src/: application_properties.rs  artefacts.rs  color_text.rs  config.rs  databases.rs  main.rs  ports.rs  schema_dokaadmin.rs  schema_dokasys.rs  schema_keymanager.rs  services.rs  templates.rs
file-server/: Cargo.toml  metadata.json
file-server/env/config/: application.properties
file-server/src/: file_delegate.rs  main.rs
guides/: install.md
imap-plugin/: Cargo.toml
imap-plugin/src/: main.rs
key-manager/: Cargo.toml  README.md  Rocket.toml
key-manager/database/: 01_create_table.sql
key-manager/env/config/: application.properties
key-manager/src/: all_tests.rs  key.rs  main.rs
session-manager/: Cargo.toml
session-manager/database/: 10_create_table.sql  update_sessions.sh
session-manager/env/config/: application.properties
session-manager/env/keys/: cek.key
session-manager/src/: main.rs  session.rs
static/: script.js
templates/: index.hbs
