[workspace]

members = [
    "commons-error",
    "commons-pg",
    "dkcrypto",
    "dkconfig",
    "dkdto",
    "doka-cli",
    "commons-services",
    "key-manager",
    "session-manager",
    "admin-server",
    "file-server",
    "document-server",
    "doka-api-tests",
    "doka-dbpool-test-server",
    "doka-one-installer",
]

[workspace.dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_derive = "^1.0"

rocket = "^0.4"
rocket_cors = "0.5.2"
rocket_contrib = { version = "^0.4",  default-features = false, features = ["json","handlebars_templates", "tera_templates"] }
base64 = "^0.21"
rs-uuid = "^0.4"
log = "^0.4"
log4rs = "^1.2"
rocket_okapi = "^0.5"
schemars = { version = "^0.7", features = ["chrono"] } #because of okapi
okapi = { version = "^0.4", features = ["derive_json_schema"] }
java-properties = "^1.2"
#obfustring = "^0.5"
anyhow = "^1.0"
uuid = "^1.2"
#Find another crypto crates
# rust-crypto = "^0.2"
rand = "^0.8"
csv = "^1.1"

lazy_static = "^1.4"
mut_static = "^5.0"
# For direct connection to the cs and fs database
postgres = { version = "^0.19", features = ["with-chrono-0_4"] }
postgres-types = "^0.2"

r2d2_postgres = "^0.18"
bcrypt = "^0.13"
unicode-segmentation = "^1.8"
bytes = "^1.2"

num_cpus = "^1.13"
rayon = "^1.6"

reqwest = { version = "^0.11", features = ["blocking", "json"] }
tokio = { version = "^1", features = ["full"] }
async-trait = "0.1.81"
axum = "^0.7"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"]}
chrono = { version = "^0.4", features = ["serde"] }
#chrono = "^0.4"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
incremental = true

[profile.dev]
incremental = true