[package]
name = "admin-server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
rs-uuid = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
okapi = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }

lazy_static = { workspace = true }
mut_static = { workspace = true }
# For direct connection to the cs and fs database
postgres = { workspace = true }
postgres-types = { workspace = true }

commons-pg = {path="../commons-pg"}
commons-error = {path="../commons-error"}
common-config = {path="../common-config"}
dkcrypto = {path="../dkcrypto"}
commons-services = {path= "../commons-services" }
dkdto = {path="../dkdto"}
doka-cli = {path="../doka-cli"}

