[package]
name = "commons-error"
version = "0.3.0"
authors = ["dpapin1118 <denis.pro@isd.lu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }

#[dev-dependencies]
#log4rs = { workspace = true }
