[package]
name = "commons-pg"
version = "0.1.0"
authors = ["denis <denis.1>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
postgres = { version = "0.19.1", features = ["with-chrono-0_4"] }
postgres-types = "0.2.2"
r2d2_postgres = "0.18.0"
chrono = "0.4"
anyhow = "1.0"
lazy_static = "1.4.0"
mut_static = "5.0.0"
commons-error = {path="../commons-error"}

[dev-dependencies]
log4rs = "0.11.0"


