[package]
name = "commons-pg"
version = "0.3.0"
authors = ["denis <denis.1>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
postgres = { workspace = true }
postgres-types = { workspace = true }
r2d2_postgres = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
mut_static = { workspace = true }

dkdto = {path="../dkdto"}
commons-error = {path="../commons-error"}

[dev-dependencies]
log4rs = { workspace = true }

