[package]
name = "commons-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
rocket_okapi = { workspace = true }
okapi = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }

commons-error = {path="../commons-error"}
commons-pg = {path="../commons-pg"}
dkconfig = {path="../dkconfig"}
dkcrypto = {path="../dkcrypto"}
dkdto = {path="../dkdto"}
doka-cli = {path="../doka-cli"}
