[package]
name = "commons-services"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
okapi = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }

commons-error = {path="../commons-error"}
commons-pg = {path="../commons-pg"}
dkconfig = {path="../dkconfig"}
dkcrypto = {path="../dkcrypto"}
dkdto = {path="../dkdto"}
doka-cli = {path="../doka-cli"}
