[package]
name = "dkconfig"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
rocket = "0.4.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
log4rs = "0.11.0"
schemars = "0.7"
obfstr = "0.2"
rust-crypto = "0.2.36"
rand = "0.7.3"
rustc-serialize = "0.3.24"
java-properties = "1.2.0"
anyhow = "1.0"
lazy_static = "1.4.0"
commons-error = {path="../commons-error"}
