[package]
name = "dkconfig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
schemars = { workspace = true }
obfustring = { workspace = true }
rust-crypto = { workspace = true }
rand = { workspace = true }

java-properties = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }

commons-error = {path="../commons-error"}
