[package]
name = "dkconfig"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "^5.0"

chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
rand = { workspace = true }

java-properties = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }

commons-error = {path="../commons-error"}

