[package]
name = "dkcrypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
schemars = { workspace = true }
#obfustring = { workspace = true }
rust-crypto = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

anyhow = { workspace = true }
bcrypt = { workspace = true }
sha2 = "0.10.6"
orion = "0.17.4"

commons-error = {path="../commons-error"}
