[package]
name = "dkdto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
schemars = { workspace = true }
rocket = {workspace = true}
rocket_okapi = { workspace = true }
rocket_contrib = { workspace = true }
bytes = { workspace = true }
