[package]
name = "dkdto"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "^1.1"
axum = "^0.7" # TODO remove this
once_cell = "^1.10"
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
bytes = { workspace = true }