[package]
name = "dkdto"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "^1.10"
#bytes = { workspace = true }
bytes = { version = "^1.5", features = [] }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_derive = { workspace = true }
ciborium = "^0.2"
http = "^1.1"
axum = "^0.7" # TODO remove this
