[package]
name = "document-server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
rocket = { workspace = true }
rocket_contrib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
rs-uuid = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
rocket_okapi = { workspace = true }
okapi = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
unicode-segmentation = { workspace = true }
rayon = { workspace = true }

commons-pg = {path="../commons-pg"}
commons-error = {path="../commons-error"}
dkconfig = {path="../dkconfig"}
dkcrypto = {path="../dkcrypto"}
commons-services = {path= "../commons-services" }
dkdto = {path="../dkdto"}
doka-cli = {path="../doka-cli"}
regex = "1.10.2"

# For API client
#reqwest = { version = "0.11", features = ["blocking", "json"] }
#tokio = { version = "1", features = ["full"] }

