[package]
name = "document-server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
rs-uuid = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
okapi = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
unicode-segmentation = { workspace = true }
rayon = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }

once_cell = "^1.19"
regex = "^1.10"

commons-pg = { path = "../commons-pg" }
commons-error = { path = "../commons-error" }
common-config = { path = "../common-config" }
dkcrypto = { path = "../dkcrypto" }
commons-services = { path = "../commons-services" }
dkdto = { path = "../dkdto" }
doka-cli = { path = "../doka-cli" }


[dev-dependencies]
sqlparser = "^0.58"   # or the latest version

# For API client
#reqwest = { version = "0.11", features = ["blocking", "json"] }
#tokio = { version = "1", features = ["full"] }

