[package]
name = "doka-api-tests"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
rs-uuid = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
okapi = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

lazy_static = { workspace = true }
mut_static = { workspace = true }

commons-pg = { path = "../commons-pg" }
commons-error = { path = "../commons-error" }
dkconfig = { path = "../dkconfig" }
dkcrypto = { path = "../dkcrypto" }
commons-services = { path = "../commons-services" }
dkdto = { path = "../dkdto" }
doka-cli = { path = "../doka-cli" }

