[package]
name = "doka-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
rocket = "0.4.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rs-uuid = "0.3.1"
log = "0.4"
log4rs = "0.11.0"
rocket_okapi = "0.5.1"
okapi = { version = "0.4", features = ["derive_json_schema"] }
anyhow = "1.0"
uuid = "^0.5"
rustc-serialize = "0.3.24"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
bytes = "1.2.1"

commons-error = {path="../commons-error"}
dkcrypto = {path="../dkcrypto"}
dkdto = {path="../dkdto"}
dkconfig={path="../dkconfig"}
