[package]
name = "doka-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
rs-uuid = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
rocket_okapi = { workspace = true }
okapi = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

reqwest = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
colored = "2.0.0"

commons-error = {path="../commons-error"}
dkcrypto = {path="../dkcrypto"}
dkdto = {path="../dkdto"}
dkconfig={path="../dkconfig"}
