[package]
name = "doka-one-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
uuid = "^0.5"
bytes = "1.2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip-extract = "0.1.1"
portpicker = "0.1.1"
commons-error = {path="../commons-error"}