[package]
name = "doka-one-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
uuid = "^0.5"
bytes = "1.2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip-extract = "0.1.1"
portpicker = "0.1.1"
termcolor = "1.1"
# For direct connection to the cs and fs database
postgres = { version = "0.19.1", features = ["with-chrono-0_4"] }
postgres-types = "0.2.2"
lazy_static = "1.4.0"
mut_static = "5.0.0"
commons-error = {path="../commons-error"}
dkcrypto = {path="../dkcrypto"}