[package]
name = "doka-one-installer"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
# For direct connection to the cs and fs database
postgres = { workspace = true }
postgres-types = { workspace = true }
lazy_static = { workspace = true }
mut_static = { workspace = true }
clap = { version = "4.0.32", features = ["derive"] }
zip-extract = "0.1.1"
portpicker = "0.1.1"
termcolor = "1.1"
rpassword = "7.0.0"
commons-error = {path="../commons-error"}
dkcrypto = {path="../dkcrypto"}

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.51"}

