[package]
name = "file-server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
rs-uuid = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
log-mdc = { workspace = true }
okapi = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
num_cpus = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

mime = "^0.3"
hyper = { version = "0.14", features = ["stream"] }
bytes = "^1.5"
tokio-util = { version = "0.7.10", features = ["io"] }
axum-extra = "0.9.3"

commons-pg = { path = "../commons-pg" }
commons-error = { path = "../commons-error" }
dkconfig = { path = "../dkconfig" }
dkcrypto = { path = "../dkcrypto" }
commons-services = { path = "../commons-services" }
dkdto = { path = "../dkdto" }
doka-cli = { path = "../doka-cli" }
futures = { version = "0.3.30", features = [] }


