[package]
name = "imap-plugin"
version = "0.1.0"
edition = "2021"



[dependencies]
anyhow = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }

futures = "^0.3"
async-imap= { version = "^0.10" , default-features = false,  features = ["runtime-tokio"] }
async-native-tls = { version = "^0.5", default-features = false,  features = ["runtime-tokio"]  }
tokio-native-tls = "0.3.1"
native-tls = "0.2.12"
async-std = "1.13.0"

